--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -54,6 +54,8 @@ include::nemo/odl-nemo-engine-user.adoc[NEMO]
 
 include::netide/odl-netide-user-guide.adoc[NetIDE]
 
+include::neutron/odl-neutron-service-user.adoc[]
+
 include::nic/nic-user.adoc[NIC]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
