Documentation outline for next-ui-toolkit
Change-Id: I4c7a397126f6434365d1382924cda939add4e971
Signed-off-by: yangyxu <yangyxu@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -74,6 +74,8 @@ include::lacp/lacp-dev.adoc[]
 
 include::controller/netconf/odl-netconf-dev.adoc[]
 
+include::next-ui-toolkit/next-ui-toolkit-dev.adoc[]
+
 include::nic/nic-dev.adoc[]
 
 include::nemo/odl-nemo-engine-dev.adoc[]
