--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -75,6 +75,8 @@ include::chapter_security_considerations.adoc[]
 
 = Project-specific Installation Guides
 
+include::next-ui-toolkit/next-ui-toolkit-install.adoc[]
+
 include::opflex/agent-ovs-install.adoc[]
 
 include::ovsdb/ovsdb-install.adoc[]
@@ -129,4 +131,3 @@ Example Index
 The index is normally left completely empty, it's contents being
 generated automatically by the DocBook toolchain.
 ////////////////////////////////////////////////////////////////
-
