--- a/manuals/getting-started-guide/src/main/asciidoc/release-notes.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/release-notes.adoc
@@ -103,6 +103,7 @@ For the release notes of individual projects, please see the following pages on 
 * https://wiki.opendaylight.org/view/Vpnservice:Lithium_Release_Notes[VPN Service]
 * https://wiki.opendaylight.org/view/OpenDaylight_Virtual_Tenant_Network_(VTN):Lithium_Release_Notes[Virtual Tenant Network (VTN)]
 * https://wiki.opendaylight.org/view/YANG_Tools:Lithium:Release_Notes[YANG Tools]
+https://wiki.opendaylight.org/view/NEMO:Beryllium:Release_Notes[NEMO engine]
 
 ==== Projects without Release Notes
 
