--- a/manuals/user-guide/src/main/asciidoc/nemo/odl-nemo-engine-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/nemo/odl-nemo-engine-user.adoc
@@ -1,39 +1,74 @@
 == NEtwork MOdeling (NEMO)
-This section describes how to use the NEMO feature in OpenDaylight
-and contains contains configuration, administration, and management
-sections for the feature.
+This section describes how to use the NEMO functionality in OpenDaylight and
+contains configuration, administration, and management sections.
 
 === Overview
-TBD: An overview of the NEMO feature and the use case and the
-audience who will use the feature.
+With the network becoming more complicated, users and applications must handle
+more complex configurations to deploy new services. The NEMO project aims to
+simplify the usage of the network by providing a new intent northbound
+interface (NBI). Instead of tons of APIs, users/applications just need to
+describe their intent without caring about complex physical devices and
+implementation details. The intent will be translated into detailed
+configurations on the devices in the NEMO engine. A typical scenario is a user
+who just needs to assign which nodes to implement an VPN, without considering
+which technique is used.
 
 === NEMO Engine Architecture
-TBD: Information about NEMO Engine components and how they work together.
-Also include information about how the feature integrates with
-OpenDaylight.
+NEMO API::
+  The NEMO API provides users the NEMO model, which guides users how to
+  construct the instance of intent, and how to construct the instance of
+  predefined types.
+NEMO REST::
+  The NEMO REST provides users REST APIs to access the NEMO engine, that is, a
+  user could transmit the intent instance to NEMO engine through basic REST
+  methods.
+NEMO UI::
+  The NEMO UI provides users a visual interface to deploy service with the NEMO
+  model, and display the state in DLUX UI.
 
-=== Configuring NEMO Engine
-TBD: Describe how to configure the NEMO Engine after installation.
+=== Installing NEMO engine
+To install NEMO engine, download OpenDaylight and use the Karaf console to
+install the `odl-nemo-engine-ui` feature:
+
+  feature:install odl-nemo-engine-ui
 
 === Administering or Managing NEMO Engine
-TBD: Include related command reference or  operations
-for using the NEMO Engine.
+After installing the above feature, a user can use NEMO to express his intent
+with NEMO UI or REST APIs in apidoc.
+
+Go to `http://{controller-ip}:8181/index.html`. In this interface, a user can
+go to the NEMO UI, and use the tabs and input box to input intent, and see the
+state of intent deployment with the image.
+
+Go to `http://{controller-ip}:8181/apidoc/explorer/index.html`. In this
+interface, a user can use the REST methods "POST", "PUT","GET" and "DELETE" to
+deploy intent or query the state of deployment.
 
 === Tutorials
 Below are tutorials for NEMO Engine.
 
 ==== Using NEMO Engine
-TBD: State the purpose of tutorial
+The purpose of the tutorial is to describe how to use use UI to deploy intent.
 
 ===== Overview
-TBD: An overview of the NEMO tutorial
+This tutorial will describe how to use the NEMO ui to check the operated
+resources, the steps to deploy service, and the ultimate state.
 
 ===== Prerequisites
-TBD: Provide any prerequisite information, assumed knowledge, or environment
-required to execute the use case.
+To understand the tutorial well, we hope there are a physical or virtual
+network exist, and a ODL controller with NEMO engine must be deployed in one
+host.
 
 ===== Target Environment
-TBD: Include any topology requirement for the use case.
+The intent expressed by NEMO model is depended on network resources, so the
+user must have enough resources to use, or else, the deployment of intent will
+fail.
 
 ===== Instructions
-TBD: Step by step procedure for using NEMO Engine.
+. Run the OpenDaylight distribution and install the `odl-nemo-engine-ui`
+  feature from the Karaf console.
+. Go to  `http://{controller-ip}:8181/index.html`, and sign in.
+. Go the NEMO UI interface. And register a new user with user name, password,
+  and tenant.
+. Check the existing resources to see if it is consistent with yours.
+. Deploy service with NEMO model by the create intent menu.
