--- a/manuals/developer-guide/src/main/asciidoc/didm/didm-dev.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/didm/didm-dev.adoc
@@ -33,10 +33,139 @@ The DIDM project creates the infrastructure to support the following functions:
    support the APIs defined by the RPCs. There may be different Driver
    implementations for different device types.
 
-//TODO: Add more info and diagram. 
-//
-//=== Key APIs and Interfaces
-//TODO
-//
-//=== API Reference Documentation
-//TODO: Provide links to JavaDoc, REST API documentation, etc.
+
+=== Key APIs and Interfaces
+* User facing APIs become available from individual drivers such as openflow-feature under odl-didm-drivers
+* More device specific APIs come from device drivers such as Mininet driver odl-didm-ovs-all, and HP 3800 driver odl-didm-hp-all
+=== Run REST adjust-flow command to adjust flows and push to the device
+
+Flow mod driver for HP 3800 device is added in Beryllium release
+This driver adjusts the flows and push the same to the device. 
+This API takes the flow to be adjusted as input and displays the adjusted flow as output in the rest output container.
+Here is the REST API to adjust and push flows to HP 3800 device:
+----
+http://<CONTROLLER-IP:8181>/restconf/operations/openflow-feature:adjust-flow
+----
+
+Here is an example of an ARP flow and how it gets adjusted and pushed to device HP3800:
+====== adjust-flow Input
+
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<input xmlns="urn:opendaylight:params:xml:ns:yang:didm:drivers:openflow" xmlns:opendaylight-inventory="urn:opendaylight:inventory">
+  <node>/opendaylight-inventory:nodes/opendaylight-inventory:node[opendaylight-inventory:id='openflow:673249119553088']</node>
+    <flow>
+      <match>
+        <ethernet-match>
+            <ethernet-type>
+                <type>2054</type>
+            </ethernet-type>
+        </ethernet-match>
+      </match>
+      <flags>SEND_FLOW_REM</flags>
+      <priority>0</priority>
+      <flow-name>ARP_FLOW</flow-name>
+      <instructions>
+        <instruction>
+            <order>0</order>
+            <apply-actions>
+                <action>
+                    <order>0</order>
+			        <output-action>
+				        <output-node-connector>CONTROLLER</output-node-connector>
+    				    <max-length>65535</max-length>
+                    </output-action>
+                </action>
+                <action>
+			        <order>1</order>
+			        <output-action>
+				        <output-node-connector>NORMAL</output-node-connector>
+				        <max-length>65535</max-length>
+                    </output-action>
+                </action>
+            </apply-actions>
+        </instruction>
+      </instructions>
+      <idle-timeout>180</idle-timeout>
+      <hard-timeout>1800</hard-timeout>
+      <cookie>10</cookie>
+    </flow>
+</input>
+
+====== adjust-flow Output
+Table ID has been identified for the given flow and two flow mods are created as a result of adjustment.
+The first one is to catch ARP packets in Hardware table 100 with an action to goto table 200.
+The second flow mod is in table 200 with actions: output normal and output controller.
+
+{
+  "output": {
+    "flow": [
+      {
+        "idle-timeout": 180,
+        "instructions": {
+          "instruction": [
+            {
+              "order": 0,
+              "apply-actions": {
+                "action": [
+                  {
+                    "order": 1,
+                    "output-action": {
+                      "output-node-connector": "NORMAL",
+                      "max-length": 65535
+                    }
+                  },
+                  {
+                    "order": 0,
+                    "output-action": {
+                      "output-node-connector": "CONTROLLER",
+                      "max-length": 65535
+                    }
+                  }
+                ]
+              }
+            }
+          ]
+        },
+        "strict": false,
+        "table_id": 200,
+        "flags": "SEND_FLOW_REM",
+        "cookie": 10,
+        "hard-timeout": 1800,
+        "match": {
+          "ethernet-match": {
+            "ethernet-type": {
+              "type": 2054
+            }
+          }
+        },
+        "flow-name": "ARP_FLOW",
+        "priority": 0
+      },
+      {
+        "idle-timeout": 180,
+        "instructions": {
+          "instruction": [
+            {
+              "order": 0,
+              "go-to-table": {
+                "table_id": 200
+              }
+            }
+          ]
+        },
+        "strict": false,
+        "table_id": 100,
+        "flags": "SEND_FLOW_REM",
+        "cookie": 10,
+        "hard-timeout": 1800,
+        "match": {},
+        "flow-name": "ARP_FLOW",
+        "priority": 0
+      }
+    ]
+  }
+}
+
+=== API Reference Documentation
+Go to http://${CONTROLLER-IP}:8181/apidoc/explorer/index.html, and look under DIDM section
+to see all the available REST calls and tables
