--- a/manuals/developer-guide/src/main/asciidoc/alto/alto-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/alto/alto-developer-guide.adoc
@@ -18,7 +18,7 @@ following code in the _pom.xml_ file.
         <version>${ALTO_VERSION}</version>
     </dependency>
 
-The current stable version for ALTO is `0.1.0-Lithium`.
+The current stable version for ALTO is `0.2.0-Beryllium`.
 
 === Putting/Fetching data from ALTO ===
 
@@ -32,8 +32,8 @@ link:https://tools.ietf.org/html/draft-shi-alto-yang-model-03[this draft].
 One way to get the URLs for the resources from `alto-northbound` is to visit
 the IRD service first where there is a `uri` field for every entry. However, the
 IRD service is not yet implemented so currently the developers have to construct
-the URLs themselves. The base URL is `/controller/nb/v2/alto` and below is a list
-of the specific paths defined in `AltoNorthbound.java` in `alto-northbound`
+the URLs themselves. The base URL is `/alto` and below is a list
+of the specific paths defined in `alto-core/standard-northbound-route`
 using Jersey `@Path` annotation:
 
 * `/ird/{rid}`: the path to access __IRD__ services;
@@ -54,7 +54,7 @@ NOTE: The segments in brackets are optional.
 If you want to fetch the data using RESTCONF, it is highly recommended to take a
 look at the `apidoc` page
 (http://{CONTROLLER_IP}:8181/apidoc/explorer/index.html)
-after installing the `alto-model` feature in karaf.
+after installing the `alto-core` feature in karaf.
 
 It is also worth pointing out that `alto-northbound` only supports `GET` and
 `POST` operations so it is impossible to manipulate the data through its RESTful
@@ -64,15 +64,6 @@ NOTE: The current implementation uses the `configuration` data store and that
 enables the developers to modify the data directly through RESTCONF. In the future this
 approach might be disabled in the core packages of ALTO but may still be
 available as an extension.
-
-==== Using AD-SAL ====
-Five interfaces are defined in package `service-api-rfc7285`. Follow the steps
-below to use them:
-
-. Determine the required service interface: `IRDService`, `NetworkMapService`,
-`CostMapService`, `EndpointPropertyService` or `EndpointCostService`;
-. Use the `ServiceHelper` to get the instance;
-. Call the corresponding methods with appropriate parameters.
 
 ==== Using MD-SAL ====
 You can also fetch data from the data store directly.
@@ -116,3 +107,29 @@ to define it using `augment` in YANG. Here is an example in `alto-hosttracker`.
 
 [source,yang]
 include::augment.yang[]
+
+
+=== Basic API and DataType
+
+.. alto-basic-types:
+
+.. alto-service-model-api:
+
+.. alto-resourcepool:
+
+.. alto-northbound:
+
+=== How to customize service
+
+==== Define new service API
+
+Add a new module in `alto-core/standard-service-models`. For example, we named our
+service model module as `model-example`.
+
+==== Implement service RPC
+
+Add a new module in `alto-basic` to implement a service RPC in `alto-core`.
+
+==== Register northbound route
+
+If necessary, you can add a northbound route module in `alto-core/standard-northbound-routes`.
