Documentation outline for for of-config.
Change-Id: I5f16b37965340f3f57e3d89a891f9e75f61c15a3
Signed-off-by: hu.rui <hu.rui2@zte.com.cn>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -54,6 +54,8 @@ include::developing-app.adoc[]
 
 include::alto/alto-developer-guide.adoc[ALTO]
 
+include::armoury/odl-armoury-dev.adoc[ARMOURY]
+
 include::bgpcep/odl-bgpcep-bgp-all-dev.adoc[BGP]
 
 include::capwap/capwap-dev.adoc[CAPWAP]
@@ -74,9 +76,15 @@ include::controller/netconf/odl-netconf-dev.adoc[]
 
 include::nic/nic-dev.adoc[]
 
+include::nemo/odl-nemo-engine-dev.adoc[]
+
+include::netide/netide-developer-guide.adoc[]
+
 include::neutron/neutron.adoc[]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
+
+include::of-config/of-config-dev.adoc[]
 
 include::openflowjava/odl-openflowjava-protocol-dev.adoc[]
 
@@ -112,6 +120,8 @@ include::usc/odl-usc-channel-dev.adoc[]
 include::vtn/vtn-dev.adoc[]
 
 include::yangtools/yangtools.adoc[]
+
+include::yang-push/odl-yang-push-dev.adoc[YANG-PUSH]
 
 :numbered!:
 
