NIC Beryllium - Adoc changes.
Change-Id: I1286c716ee88d25190d73dec6abc06ad6eacae50
Signed-off-by: Arthi.b <arthi.b@hcl.com>

--- a/manuals/user-guide/src/main/asciidoc/nic/nic-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/nic/nic-user.adoc
@@ -96,3 +96,6 @@ console CLI commands are available.
 === NIC Usage Examples
 
 include::NIC_How_To_configure_VTN_Renderer.adoc[How to configure VTN Renderer]
+include::NIC_How_To_configure_Redirect_Action.adoc[How to configure Redirect Action]
+include::NIC_How_To_configure_QoS_Attribute_Mapping.adoc[How to configure QoS Attribute Mapping]
+include::NIC_How_To_configure_Log_Action.adoc[How to configure Log Action]
